<resources>
    <string name="app_name">Profile</string>
    <string name="lblName">Nombre</string>
    <string name="hintName">Ej. Juan Perez</string>
    <string name="txtId">Matricula</string>
    <string name="hintMatricula">Ej. 1015-2222</string>
    <string name="lblCarrer">Carrera</string>
    <string name="btnSave">Guardar</string>
    <string name="lblSaludo">"Hola, "</string>
    <string name="lblNameSave">Nombre:</string>
    <string name="lblUserName" />
    <string name="lblID">Matricula:</string>
    <string name="lblIDUser" />
    <string name="lblCarfeerSave">Carrera:</string>
    <string name="lblCareerUser" />
    <string name="btnEdit">Editar</string>
    <string name="lblCareeSave">Carrera:</string>
</resources>